--- a/main.html
+++ b/main.html
@@ -8,6 +8,37 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Manali Trip <hr></h1>
+	<p>Manali is the most visited destination in india.it is the best
+		place for road trip. manali is covered with snow through out 
+		the year </p>
+	<ol>
+		<li><b>tracking</b></li>
+	     <li><b>hiking</b></li>
+	     <li><b>road trip</b></li>
+	     <li><b>sunset</b></li>
+	     <li><b>road trip</b></li>
+	</ol>
+	<ul>
+		<li><b>maggi chai</b></li>
+	     <li><b>traditional food</b></li>
+	     <li><b>biryani</b></li>
+	     <li><b>sweets</b></li>
+	     <li><b>ice cream</b></li>
+		
+	</ul>
+
+
+
+
+
+
+
+
+
+
+
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
