--- a/main.html
+++ b/main.html
@@ -9,24 +9,37 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Manali Trip <hr></h1>
-	<p>Manali is the most visited destination in india.it is the best
+	
+<main>
+	<section>
+			<p>Manali is the most visited destination in india.it is the best
 		place for road trip. manali is covered with snow through out 
 		the year </p>
-	<ol>
-		<li><b>tracking</b></li>
-	     <li><b>hiking</b></li>
-	     <li><b>road trip</b></li>
-	     <li><b>sunset</b></li>
-	     <li><b>road trip</b></li>
+	</section>
+	<section>
+	<p>
+			<ol >
+		<li><b><i>tracking</i></b></li>
+	     <li><b><i>hiking</i></b></li>
+	     <li><b><i>road trip</i></b></li>
+	     <li><b><i>sunset</i></b></li>
+	     <li><b><i>shiv temple</i></b></li>
 	</ol>
-	<ul>
-		<li><b>maggi chai</b></li>
-	     <li><b>traditional food</b></li>
-	     <li><b>biryani</b></li>
-	     <li><b>sweets</b></li>
-	     <li><b>ice cream</b></li>
+	</p>
+	</section>
+	<section>
+		<p>
+			<ul>
+		<li><b><i>maggi chai</i></b></li>
+	     <li><b><i>traditional food</i></b></li>
+	     <li><b><i>biryani</i></b></li>
+	     <li><b><i>sweets</i></b></li>
+	     <li><b><i>ice cream</i></b></li>
 		
 	</ul>
+		</p>
+	</section>
+</main>
 
 
 
